spring-domain-directory/src/main/java/com/example/demo/global/error/exception/ErrorCode.java
package com.example.demo.global.error.exception;

public class ErrorCode {
}
